--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
                 
                 
                 <h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
-<p>For full documentation visit <a href="http://mkdocs.org">mkdocs.org</a>.</p>
+<p>For full documentation visit <a href="http://mkdocs.org">mkdocs.org</a>.
+http://mkdocs.org</p>
 <h2 id="commands">Commands</h2>
 <ul>
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
