Deployed  with MkDocs version: 0.16.3

--- a/theory/index.html
+++ b/theory/index.html
@@ -332,7 +332,7 @@
 <h2 id="e">ドナルド・E・スーパー</h2>
 <h2 id="l">ジョン・L・ホランド</h2>
 <h2 id="k">ナンシー・K・シュロスバーグ</h2>
-<h2 id="d">ジョン・D・クルンボルツ</h2>
+<h2 id="d"><strong>ジョン・D・クルンボルツ</strong></h2>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>まだご存命！</p>
