Deployed  with MkDocs version: 0.16.3

--- a/theory/index.html
+++ b/theory/index.html
@@ -360,12 +360,14 @@
 <h2 id="k"><strong>ナンシー・K・シュロスバーグ</strong></h2>
 <h2 id="d1-httppsychologywikiacomwikijohn_d_krumboltz"><strong>ジョン・D・クルンボルツ</strong>[^1] : http://psychology.wikia.com/wiki/John_D._Krumboltz</h2>
 <p>http://psychology.wikia.com/wiki/John_D._Krumboltz</p>
-<h3 id="planned-happenstance-theory">計画された偶発性理論（Planned Happenstance Theory）</h3>
-<p>1.好奇心 - Curiosity
-2.持続性 - Persistence
-3.柔軟性 - Flexibility
-4.楽観性 - Optimism
-5.冒険心 - Risk Taking</p>
+<h3 id="planned-happenstance-theory"><strong>計画された偶発性理論（Planned Happenstance Theory）</strong></h3>
+<ol>
+<li>好奇心 - Curiosity</li>
+<li>持続性 - Persistence</li>
+<li>柔軟性 - Flexibility</li>
+<li>楽観性 - Optimism</li>
+<li>冒険心 - Risk Taking</li>
+</ol>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>まだご存命！</p>
