Deployed  with MkDocs version: 0.16.3

--- a/theory/index.html
+++ b/theory/index.html
@@ -371,7 +371,7 @@
 <p class="admonition-title">Note</p>
 <p>まだご存命！</p>
 </div>
-<p>http://psychology.wikia.com/wiki/John_D._Krumboltz</p>
+<p><a href="http://psychology.wikia.com/wiki/John_D._Krumboltz">http://psychology.wikia.com/wiki/John_D._Krumboltz</a></p>
 <h2 id="l_1"><strong>L・サニー・ハンセン</strong></h2>
 <h2 id="h"><strong>エドガー・H・シャイン</strong></h2>
 <h2 id="t"><strong>ダグラス・T・ホール</strong></h2>
