--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 
                 <h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
 <p>For full documentation visit <a href="http://mkdocs.org">mkdocs.org</a>.
-http://mkdocs.org</p>
+<a href="http://mkdocs.org">http://mkdocs.org</a></p>
 <h2 id="commands">Commands</h2>
 <ul>
 <li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
