Deployed  with MkDocs version: 0.16.3

--- a/theory/index.html
+++ b/theory/index.html
@@ -359,7 +359,7 @@
 <h2 id="l"><strong>ジョン・L・ホランド</strong></h2>
 <h2 id="k"><strong>ナンシー・K・シュロスバーグ</strong></h2>
 <h2 id="d"><strong>ジョン・D・クルンボルツ</strong></h2>
-<h3 id="planned-happenstance-theory"><strong>計画された偶発性理論（Planned Happenstance Theory）</strong></h3>
+<h3 id="planned-happenstance-theory"><mark>計画された偶発性理論（Planned Happenstance Theory）</mark></h3>
 <ol>
 <li>好奇心 - Curiosity</li>
 <li>持続性 - Persistence</li>
